Implementación codigo javaScript

--- a/index.html
+++ b/index.html
@@ -29,40 +29,7 @@
             </ul>
         </nav>
     </header>
-
-    <main>
-        <div class="div-1">
-            <img src="./imagen/01.jpg" alt="">
-            <h1 style="padding-left: 5px ;"> Pacifico mar </h1>
-            <p style="padding-left: 5px ;">Deliciosa comida de mar</p>
-            <p style="padding-left: 5px ;">Avenida 10 Medellim</p>
-        </div>
-        <div class="div-2">
-            <img src="./imagen/02.jpg" alt="">
-            <h1 style="padding-left: 5px ;"> Italiano </h1>
-            <p style="padding-left: 5px ;">Deliciosa comida italiana</p>
-            <p style="padding-left: 5px ;">Avenida 14 Cartagena</p>
-        </div>
-        <div class="div-3">
-            <img src="./imagen/07.jpg" alt="">
-            <h1 style="padding-left: 5px ;">Fritos y mas</h1>
-            <p style="padding-left: 5px ;">Deliciosa comida de frita</p>
-            <p style="padding-left: 5px ;">Avenida 11 Bogota</p>
-        </div>
-        <div class="div-4">
-            <img src="./imagen/04.jpg" alt="">
-            <h1 style="padding-left: 5px ;"> Pollo frito </h1>
-            <p style="padding-left: 5px ;">Delicioso pollo</p>
-            <p style="padding-left: 5px ;">Avenida 17 Cali</p>
-        </div>
-    </main>
-
-
-
-    <div class="aspect-ratio-container restaurantes">
-
-            
-    </div>
-
+    <main class="restaurantes"></main>
+    <script src="./scripts.js" type="module"></script>
 </body>
 </html>
